# fix8

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ChangeLog  LICENSE  README.md  f8config.h.in  version.sh
cmake/: buildutils.cmake
compiler/: f8c.cpp  f8c.hpp  f8cstatic.hpp  f8cutils.cpp  f8precomp.cpp  precomp.cpp
doc/: CMakeLists.txt  fix8.doxygen.in  fix8.footer.html  mainpage.doxygen
include/fix8/: configuration.hpp  connection.hpp  consolemenu.hpp  f8config.h  f8dll.h  f8exception.hpp  f8includes.hpp  f8measure.hpp  f8types.hpp  f8utils.hpp  field.hpp  hypersleep.hpp  logger.hpp  message.hpp  messagebus.hpp  mpmc.hpp  multisession.hpp  persist.hpp  session.hpp  sessionwrapper.hpp  thread.hpp  tickval.hpp  timer.hpp  traits.hpp  usage.hpp  xml.hpp  zeromq_mbus.hpp
include/fix8/ff/: allocator.hpp  buffer.hpp  dynqueue.hpp  spin-lock.hpp  utils.hpp
include/fix8/ff/mpmc/: MPMCqueues.hpp
msvc/getopt/: README.md
runtime/: configuration.cpp  connection.cpp  consolemenu.cpp  dllmain.cpp  f8measure.cpp  f8utils.cpp  filepersist.cpp  gzstream.cpp  logger.cpp  memcachedpersist.cpp  message.cpp  persist.cpp  precomp.cpp  precomp.hpp  redispersist.cpp  session.cpp  traits.cpp  xml.cpp
schema/: FIX50SP2_EP264.xml  FIXT11_EP264.xml  QUICKFIX-LICENCE
test/: harness.cpp  hfprint.cpp  hftest.cpp  hftest.hpp  myfix.cpp  myfix.hpp  myprint.cpp
utests/: f8headers.hpp  fileLogger_test.cpp  filePersister_test.cpp  message_test.cpp  mockConnection.cpp  mockConnection.hpp  session_test.cpp
util/: precomp.cpp  seqedit.cpp
